# Carbon-Tracker

./: .gitignore  API_DOCUMENTATION.md  main.py  pyproject.toml
api/: database.py  llm_utils.py  main.py  models.py  users.py
api/billing/: main.py  pdf_generator.py
api/diet_co2/: loader.py  main.py
api/python_vin_co2/src/: main.py
api/python_vin_co2/src/services/: gemini_ocr.py  gps.py
api/python_vin_co2/src/utils/: excel_loader.py
deploy/: VM_SETUP.md  deploy.sh  init_db.py
